opam-version: "2.0"

depends: [
  "ocaml" {= "4.14.0"}
  "dune" {build}
  "melange"
  "mel"
]

pin-depends: [
  ["dune.dev" "git+https://github.com/ocaml/dune.git#05797cd3f505beca4d6d62c576506d7608a6d29d"]
  ["melange.dev" "git+https://github.com/melange-re/melange.git#f4ddebbc7755af5e983c4df2ac51498f286e1074"]
  ["mel.dev" "git+https://github.com/melange-re/melange.git#f4ddebbc7755af5e983c4df2ac51498f286e1074"]
]
